# mlflow-tp

./: Pipfile  README.md  evaluation.py  evidently_report.html  generate_data.py  iris_retrain_data.csv  pyproject.toml  run-pipeline.sh  test.csv  train.csv  validate.csv
.github/workflows/: model-deployment.yml
data/processed/: test.csv  train.csv  validate.csv
data/raw/: iris.csv
fastapi-app/: .dockerignore  .env  Dockerfile  app.py  requirements.txt
fastapi-app/api/: __init__.py  inference.py  root.py
fastapi-app/core/: config.py
fastapi-app/models/: __init__.py
fastapi-app/schemas/: __init__.py  inference.py
fastapi-app/services/: __init__.py  ml.py  ml_models.py
scripts/: evaluate_model.py  prepare_data.py  train_model.py
