[project]
name = "mlops-with-mlflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "mlflow>=2.21.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pydantic-settings>=2.8.1",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pyproject2conda>=0.19.1",
]
